--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <i class="fas fa-graduation-cap"></i>
                 <span>2020-2021</span>
                 <h3>Completed SSC</h3>
-                <p>I have completed my 12<sup>th</sup> Std in Vision School Rajkot with 75% in 2021 .</p>
+                <p>I have completed my 10<sup>th</sup> Std in Vision School Rajkot with 75% in 2021 .</p>
             </div>
        </section>
     <!-- Contact -->
@@ -128,10 +128,11 @@
         </div>
         <div class="contact-form">
             <form action="">
-                <input type="text" placeholder="Your Name">
-                <input type="email" name="" id="" placeholder="Your Email">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Write Message Here..."></textarea>
-                <input type="button" value="Send" class="contact-button">
+                <input type="text" id="name" placeholder="Your Name" class="box" required>
+                <input type="email" id="email" placeholder="Your Email" class="box" required>
+                <textarea name="" id="msg" cols="30" rows="10" placeholder="Write Message Here..."></textarea>
+                <input type="button" value="Send" class="contact-button" onclick="gotowhatsapp()">
+                
             </form>
         </div>
     </section>
