--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="follow">
                 <a href="#" class="fab fa-facebook-f"></a>
                 <a href="#" class="fab fa-twitter"></a>
-                <a href="#" class="fab fa-instagram"></a>
+                <a href="#https://www.instagram.com/raghuvansi_di_girl" class="fab fa-instagram"></a>
                 <a href="#" class="fab fa-linkedin"></a>
             </div>
           </header>
