--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </nav>
 
             <div class="follow">
-                <a href="#https://www.facebook.com/profile.php?id=61571835151631&mibextid=ZbWKwL" class="fab fa-facebook-f"></a>
-                <a href="#" class="fab fa-twitter"></a>
+                <a href="#https://www.facebook.com/.php?id=61571835151631&mibextid=ZbWKwL" class="fab fa-facebook-f"></a>
+                <a href="#https://x.com/richa_rajveer?t=hz9U5i-LR2Z3QAnLLRupVw&s=09" class="fab fa-twitter"></a>
                 <a href="https://www.instagram.com/invites/contact/?igsh=clup1mchh5up&utm_content=n52dork" class="fab fa-instagram"></a>
                 <a href="#https://www.linkedin.com/in/richa-rajveer-162b90344?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="fab fa-linkedin"></a>
             </div>
@@ -68,7 +68,7 @@
               <div class="row-1">
          
                   <div class="image">
-                    <img src="image/" alt="">
+                    <img src="image/richu1.png" alt="">
                   </div>
 
                   <div class="content">
