--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="content">
               <span class="hi" > Hello,</span>
               <h3> i am <span> Richa Rajveer </span> </h3>
-              <p class="info"> i am a full stack developer</p>
+              <p class="info"> I'M <span class="rr">Web Devloper</span></p>
               <p class="text">Hello, I am a full stack developer and i would like to work as a full Stack Developer, i have a know about languages HTML, CSS, JavaScript,jQuery,BootStrap,PHP,MySQL.</p>
               <a href="#about" class="btn" style="border-radius: 10px;">about me</a>
             </div>
