--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <div class="follow">
                 <a href="https://www.facebook.com/profile.php?id=61571835151631&mibextid=ZbWKwL" class="fab fa-facebook-f"></a>
-                <a href="https://x.com/richa_rajveer?t=hz9U5i-LR2Z3QAnLLRupVw&s=09" class="fab fa-twitter"></a>
+                <a href="https://x.com/richa_rajveer?t=hz9U5i-LR2Z3QAnLLRupVw&s=09" class="fab fa-x-twitter"></a>
                 <a href="https://www.instagram.com/invites/contact/?igsh=clup1mchh5up&utm_content=n52dork" class="fab fa-instagram"></a>
                 <a href="https://www.linkedin.com/in/richa-rajveer-162b90344?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="fab fa-linkedin"></a>
             </div>
@@ -52,7 +52,7 @@
             </div>
 
             <div class="image">
-              <img src="image/richaa.png" alt="">
+              <img src="image/richar.png" alt="">
             </div>
 
          </section>
@@ -197,8 +197,8 @@
      
     <footer class="footer">
 
-      <div class="footer icon-top">
-           <a href="#home"><img src="image/arrow.png" style="float: right; border: 2px solid darkmagenta; width: 50px; height: 50px;"></a>
+      <div class=" icon-top">
+           <a href="#home"><img src="image/arrow.png" style="float: right; border: 2px solid darkmagenta; width: 50px; height: 50px; margin-bottom: 30px; margin-right: 50px;"></a>
       </div>
 
     </footer>
