--- a/index.html
+++ b/index.html
@@ -191,14 +191,13 @@
   </div>
 
 
-  </section>
 
   <!-- Footer Section Strart! -->
      
     <footer class="footer">
 
       <div class=" icon-top">
-           <a href="#home"><img src="image/arrow.png" style="float: right; border: 2px solid darkmagenta; width: 50px; height: 50px; margin-bottom: 10px; margin-right: 30px;"></a>
+           <a href="#home"><img src="image/arrow.png" style="float: right; border: 2px solid darkmagenta; width: 50px; height: 50px; margin-top: -53px; margin-right: 5px;"></a>
       </div>
 
     </footer>
