--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                       </div>
                     </div>
 
-                    <a href="#" class="btn">download CV</a>
+                    <a href="WPS PDF.lnk" class="btn">download CV</a>
                     <a href="#contact" class="btn">hire me</a>
               </div>
 
@@ -186,22 +186,11 @@
      <textarea name="" placeholder="message" id="msg"  cols="30" rows="10" required></textarea>
 
      <input type="submit" class="btn" value="Send Message" onclick="gotowhatsapp()">
-      
+     <div class=" icon-top">
+      <a href="#home"><img src="image/arrow.png" style="float: right; border: 2px solid darkmagenta; width: 50px; height: 50px; margin-top: -53px; margin-right: 5px;"></a>
+ </div>
     </form>
   </div>
-
-
-
-  <!-- Footer Section Strart! -->
-     
-    <footer class="footer">
-
-      <div class=" icon-top">
-           <a href="#home"><img src="image/arrow.png" style="float: right; border: 2px solid darkmagenta; width: 50px; height: 50px; margin-top: -53px; margin-right: 5px;"></a>
-      </div>
-
-    </footer>
-
  <script src="script.js"></script>
  </body>
  </html>
