--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                       </div>
                     </div>
 
-                    <a href="richa rajveer  (2).pdf" class="btn">download CV</a>
+                    <a href="richa" class="btn">download CV</a>
                     <a href="#contact" class="btn">hire me</a>
               </div>
 
@@ -146,9 +146,9 @@
         
                     <div class="box">
                         <i class="fas fa-graduation-cap"></i>
-                        <span>2023-2024</span>
-                        <h3>Completed F.Y BCA</h3>
-                        <p>I have completed F.Y BCA in Shree Om Collage Rajkot with 75% in 2024</p>
+                        <span>2024-2025</span>
+                        <h3>Completed S.Y BCA</h3>
+                        <p>I have completed S.Y BCA in Shree Om Collage Rajkot in 2024</p>
                     </div>
         
                     <div class="box">
