--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                       </div>
                     </div>
 
-                    <a href="richa" class="btn">download CV</a>
+                    <a href="richu" class="btn">download CV</a>
                     <a href="#contact" class="btn">hire me</a>
               </div>
 
