--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                       </div>
                     </div>
 
-                    <a href="richu23.pdf" class="btn">download CV</a>
+                    <a href="richarajveer1519.pdf" class="btn">download CV</a>
                     <a href="#contact" class="btn">hire me</a>
               </div>
 
@@ -148,7 +148,7 @@
                         <i class="fas fa-graduation-cap"></i>
                         <span>2024-2025</span>
                         <h3>Completed S.Y BCA</h3>
-                        <p>I have completed S.Y BCA in Shree Om Collage Rajkot in 2024</p>
+                        <p>I have completed S.Y BCA in Shree Om Collage Rajkot in 2025</p>
                     </div>
         
                     <div class="box">
